@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmJpeg.cxx,v $
   Language:  C++
-  Date:      $Date: 2004/10/22 03:05:42 $
-  Version:   $Revision: 1.28 $
+  Date:      $Date: 2004/12/12 17:21:08 $
+  Version:   $Revision: 1.29 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -609,5 +609,254 @@ bool gdcm_read_JPEG_file ( std::ifstream* fp, void* image_buffer )
  */
  
 //----------------------------------------------------------------------------
+
+
+/**
+ * \brief   routine for JPEG decompression from a memory buffer.
+ * routine for JPEG decompression from a memory buffer. This routine
+ * only reads one JPEG image at a time, but returns information about
+ * how many bytes have been consumed from the \c input_buffer, and 
+ * how many bytes have been written into the output \c image_buffer.
+ *
+ * @param input_buffer pointer to a memory buffer containing the jpeg
+ *                     compressed data.
+ * @param buflen length of the memory buffer.
+ * @param image_buffer pointer to the location where the decompressed
+ *                     image will be filled.
+ * @param howManyRead returns how many bytes have been consumed from the
+ *                    input_buffer.
+ * @param howManyWritten returns how many bytes have been written into
+ *                       the output image_buffer.
+ * @return 1 on success, 0 on error
+ */
+ 
+bool gdcm_read_JPEG_memory ( const JOCTET* input_buffer, const size_t buflen, 
+                             void* image_buffer,
+                             size_t *howManyRead, size_t *howManyWritten)
+{
+   char* pimage=(char *)image_buffer;
+   JOCTET* input = (JOCTET*) input_buffer;
+
+   /* This struct contains the JPEG decompression parameters and pointers to
+    * working space (which is allocated as needed by the JPEG library).
+    */
+   struct jpeg_decompress_struct cinfo;
+
+   /* -------------- inside, we found :
+    * JDIMENSION image_width;       // input image width 
+    * JDIMENSION image_height;      // input image height 
+    * int input_components;         // nb of color components in input image 
+    * J_COLOR_SPACE in_color_space; // colorspace of input image 
+    * double input_gamma;           // image gamma of input image 
+    * -------------- */
+
+   /* We use our private extension JPEG error handler.
+    * Note that this struct must live as long as the main JPEG parameter
+    * struct, to avoid dangling-pointer problems.
+    */
+   struct my_error_mgr jerr;
+   /* More stuff */
+
+   JSAMPARRAY buffer;/* Output row buffer */
+  
+   // rappel :
+   // ------
+   // typedef unsigned char JSAMPLE;
+   // typedef JSAMPLE FAR *JSAMPROW;/* ptr to one image row of pixel samples. */
+   // typedef JSAMPROW *JSAMPARRAY;/* ptr to some rows (a 2-D sample array) */
+   // typedef JSAMPARRAY *JSAMPIMAGE;/* a 3-D sample array: top index is color */
+
+   int row_stride;/* physical row width in output buffer */
+  
+#ifdef GDCM_JPG_DEBUG
+   printf("entree dans File::gdcm_read_JPEG_file (i.e. 8), depuis gdcmJpeg\n");
+#endif //GDCM_JPG_DEBUG
+
+   /* In this example we want to open the input file before doing anything else,
+    * so that the setjmp() error recovery below can assume the file is open.
+    * VERY IMPORTANT: use "b" option to fopen() if you are on a machine that
+    * requires it in order to read binary files.
+    */
+    
+  /* Step 1: allocate and initialize JPEG decompression object */  
+#ifdef GDCM_JPG_DEBUG
+  printf("Entree Step 1\n");
+#endif //GDCM_JPG_DEBUG
+  
+  /* We set up the normal JPEG error routines, then override error_exit. */
+  
+  cinfo.err = jpeg_std_error(&jerr.pub);
+  jerr.pub.error_exit = my_error_exit;
+  
+  /* Establish the setjmp return context for my_error_exit to use. */  
+  if (setjmp(jerr.setjmp_buffer))
+  {
+    /* If we get here, the JPEG code has signaled an error.
+     * We need to clean up the JPEG object, close the input file, and return.
+     */
+    jpeg_destroy_decompress(&cinfo);
+    
+    *howManyRead    += input - input_buffer;
+    *howManyWritten += pimage - (char *)image_buffer;
+    return 0;
+  }
+
+  /* Now we can initialize the JPEG decompression object. */
+  jpeg_create_decompress(&cinfo);
+
+  /* Step 2: specify data source (eg, a file) */
+#ifdef GDCM_JPG_DEBUG
+  printf("Entree Step 2\n");
+#endif //GDCM_JPG_DEBUG
+  
+  jpeg_memory_src(&cinfo, input, buflen);
+  
+  /* Step 3: read file parameters with jpeg_read_header() */
+#ifdef GDCM_JPG_DEBUG
+  printf("Entree Step 3\n");
+#endif //GDCM_JPG_DEBUG
+  
+  (void) jpeg_read_header(&cinfo, TRUE);
+  
+  /* We can ignore the return value from jpeg_read_header since
+   *   (a) suspension is not possible with the stdio data source, and
+   *   (b) we passed TRUE to reject a tables-only JPEG file as an error.
+   * See libjpeg.doc for more info.
+   */
+  
+  // prevent the library from performing any color space conversion
+  if( cinfo.process == JPROC_LOSSLESS )
+  {
+     cinfo.jpeg_color_space = JCS_UNKNOWN;
+     cinfo.out_color_space = JCS_UNKNOWN;
+  }
+
+#ifdef GDCM_JPG_DEBUG
+  printf("--------------Header contents :----------------\n");
+  printf("image_width %d image_height %d\n", 
+         cinfo.image_width , cinfo.image_height);
+  printf("bits of precision in image data  %d \n", 
+         cinfo.output_components);
+  printf("nb of color components returned  %d \n", 
+         cinfo.data_precision);
+#endif //GDCM_JPG_DEBUG
+
+
+  /*
+   * JDIMENSION image_width;       // input image width 
+   * JDIMENSION image_height;      // input image height 
+   * int output_components;        // # of color components returned 
+   * J_COLOR_SPACE in_color_space; // colorspace of input image 
+   * double input_gamma;           // image gamma of input image
+   * int data_precision;           // bits of precision in image data 
+   */
+
+  /* Step 4: set parameters for decompression */
+#ifdef GDCM_JPG_DEBUG
+  printf("Entree Step 4\n");
+#endif //GDCM_JPG_DEBUG
+  /* In this example, we don't need to change any of the defaults set by
+   * jpeg_read_header(), so we do nothing here.
+   */
+
+  /* Step 5: Start decompressor */
+#ifdef GDCM_JPG_DEBUG
+  printf("Entree Step 5\n");
+#endif //GDCM_JPG_DEBUG
+
+  (void) jpeg_start_decompress(&cinfo);
+  /* We can ignore the return value since suspension is not possible
+   * with the stdio data source.
+   */
+
+  /* We may need to do some setup of our own at this point before reading
+   * the data.  After jpeg_start_decompress() we have the correct scaled
+   * output image dimensions available, as well as the output colormap
+   * if we asked for color quantization.
+   * In this example, we need to make an output work buffer of the right size.
+   */ 
+
+  /* JSAMPLEs per row in output buffer */
+  row_stride = cinfo.output_width * cinfo.output_components*2;
+  
+#ifdef GDCM_JPG_DEBUG
+  printf ("cinfo.output_width %d cinfo.output_components %d  row_stride %d\n",
+          cinfo.output_width, cinfo.output_components,row_stride);
+#endif //GDCM_JPG_DEBUG
+
+  /* Make a one-row-high sample array that will go away when done with image */
+  buffer = (*cinfo.mem->alloc_sarray)
+     ((j_common_ptr) &cinfo, JPOOL_IMAGE, row_stride, 1);
+    
+
+  /* Step 6: while (scan lines remain to be read) */
+#ifdef GDCM_JPG_DEBUG
+  printf("Entree Step 6\n"); 
+#endif //GDCM_JPG_DEBUG
+  /*           jpeg_read_scanlines(...); */
+
+  /* Here we use the library's state variable cinfo.output_scanline as the
+   * loop counter, so that we don't have to keep track ourselves.
+   */
+#ifdef GDCM_JPG_DEBUG
+  printf ("cinfo.output_height %d  cinfo.output_width %d\n",
+          cinfo.output_height,cinfo.output_width);
+#endif //GDCM_JPG_DEBUG
+  
+  int bufsize = cinfo.output_width * cinfo.output_components;
+  size_t rowsize = bufsize * sizeof(JSAMPLE);
+
+  while (cinfo.output_scanline < cinfo.output_height) {
+     /* jpeg_read_scanlines expects an array of pointers to scanlines.
+      * Here the array is only one element long, but you could ask for
+      * more than one scanline at a time if that's more convenient.
+      */
+
+     //printf( "scanlines: %d\n",cinfo.output_scanline);
+     (void) jpeg_read_scanlines(&cinfo, buffer, 1);
+     memcpy( pimage, *buffer,rowsize); 
+     pimage+=rowsize;
+  }
+   
+  /* Step 7: Finish decompression */
+#ifdef GDCM_JPG_DEBUG
+  printf("Entree Step 7\n");
+#endif //GDCM_JPG_DEBUG
+
+  input = (JOCTET *)cinfo.src->next_input_byte;
+
+  (void) jpeg_finish_decompress(&cinfo);
+
+  /* We can ignore the return value since suspension is not possible
+   * with the stdio data source.
+   */
+   
+  /* Step 8: Release JPEG decompression object */
+
+#ifdef GDCM_JPG_DEBUG
+  printf("Entree Step 8\n");
+#endif //GDCM_JPG_DEBUG
+  
+  /* This is an important step since it will release a good deal of memory. */
+  
+  jpeg_destroy_decompress(&cinfo);
+  
+   
+  /* After finish_decompress, we can close the input file.
+   * Here we postpone it until after no more JPEG errors are possible,
+   * so as to simplify the setjmp error logic above.  (Actually, I don't
+   * think that jpeg_destroy can do an error exit, but why assume anything...)
+   */
+  
+  /* At this point you may want to check to see whether any corrupt-data
+   * warnings occurred (test whether jerr.pub.num_warnings is nonzero).
+   */
+
+  /* And we're done! */
+  *howManyRead    += input - input_buffer;
+  *howManyWritten += pimage - (char *)image_buffer;
+
+  return true;
+}
 
 } // end namespace gdcm
